--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,16 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   gap: 48px 24px;
 }
 
+.card-link {
+  display: block;
+}
+
+.card-link:hover,
+.card-link:focus {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
 /* Для першого пункту списку в класі заданий стиль width: calc((100% - 48px) / 3);
 для визначення ширини для елемента списку (від загальної ширини екрану віднімаємо
 суму відступів між пунктами і ділимо це на кількість пунктів списку в одному рядку) */
@@ -528,6 +538,7 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
 
 .card-script {
   padding: 32px 16px;
+  border: 1px solid var(--cornflower);
 }
 
 .card-subtitle {
