--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,8 @@ p {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
+  /* max-width: 100%;
+  height: auto; */
 }
 
 .btn {
@@ -85,6 +85,7 @@ img {
 .link {
   color: currentColor;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -110,10 +111,10 @@ img {
   color: var(--navy-blue);
 }
 
-.logo:hover,
+/* .logo:hover,
 .logo:focus {
   color: var(--ocean);
-}
+} */
 
 .logo-down {
   color: var(--cloud);
@@ -168,6 +169,11 @@ img {
 }
 
 .nav-link {
+  position: relative;
+  display: block;
+
+  padding: 24px 0;
+
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 16px;
@@ -176,8 +182,34 @@ img {
   color: var(--navy-blue);
 }
 
+.nav-link::after {
+  position: absolute;
+  /* display: block; */
+  content: "";
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link.active {
+  color: var(--ocean);
+}
+
+.nav-link.active::after,
+.nav-link:hover::after,
+.nav-link:focus::after {
+  background-color: var(--ocean);
+  transform: scaleX(1);
+}
+
 .nav-item {
-  padding: 24px 0;
+  /* padding: 24px 0; */
 }
 
 .nav-contacts {
@@ -237,13 +269,14 @@ img {
 
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: var(--iris);
+  background-color: var(--iris);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: var(--ocean);
+  /* box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15); */
+  background-color: var(--ocean);
 }
 
 /* Style About */
@@ -380,11 +413,12 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-social:hover,
 .link-social:focus {
-  background-color: var(--green);
+  background-color: var(--ocean);
 }
 
 /* Style  Customers */
@@ -419,6 +453,8 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   border: 1px solid var(--light-slate);
   border-radius: 4px;
   color: var(--light-slate);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customer-link:hover,
@@ -471,6 +507,15 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   gap: 16px;
 }
 
+.link-social-footer {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-social-footer:hover,
+.link-social-footer:focus {
+  background-color: var(--green);
+}
+
 /* Style filter  */
 
 .filter-card-section {
@@ -497,7 +542,11 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   min-width: 116px;
   min-height: 48px;
 
-  background: var(--cloud);
+  background-color: var(--cloud);
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    olor 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -505,7 +554,7 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.08),
     0 3px 1px 0 rgba(0, 0, 0, 0.1);
   color: var(--white);
-  background: var(--ocean);
+  background-color: var(--ocean);
 }
 
 /* Style cards */
@@ -518,6 +567,7 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
 
 .card-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-link:hover,
@@ -534,6 +584,30 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   width: calc((100% - 48px) / 3);
   /* border: 1px solid var(--cornflower);
   border-top: none; */
+}
+
+.card-box{
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px 0;
+  color: var(--cloud);
+  background-color: var(--iris);
+  
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-item:hover .overlay{
+  transform: translateY(0);
 }
 
 .card-script {
