--- a/css/style.css
+++ b/css/style.css
@@ -561,14 +561,14 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   background-color: transparent;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 
-   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-subscribe-input:focus {
   border-color: var(--iris);
   border-radius: 4px;
 }
-.form-subscribe-input::placeholder{
+.form-subscribe-input::placeholder {
   color: var(--white);
 }
 
@@ -584,7 +584,7 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   border-radius: 4px;
   background: var(--iris);
 
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-subscribe-btn:hover,
@@ -785,7 +785,7 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
   fill: var(--white);
 }
 
-.modal-type{
+.modal-type {
   margin-top: 48px;
 
   font-family: inherit;
@@ -798,8 +798,7 @@ text-align: center;
 color: var(--navy-blue); */
 }
 
-
-.form-action{
+.form-action {
   margin-top: 16px;
   /* width: 360px;
   height: 336px; */
@@ -808,18 +807,100 @@ color: var(--navy-blue); */
   gap: 8px;
 }
 
-
-.form-action-label{
-display: flex;
-flex-direction: column;
-position: relative;
+.form-action-label {
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-.form-action-input{
+.form-action-subtitle {
+  margin-bottom: 4px;
+
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
 }
 
-.form-action-icon{
-position: absolute;
-top: 0;
-left: 0;
+.form-action-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 40px;
+
+  outline: none;
+  border: 1px solid var(--navy-blue-modal);
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-action-input:focus {
+  border-color: var(--iris);
+}
+
+.form-action-textarea {
+  padding: 8px 16px;
+  width: 100%;
+  height: 120px;
+  resize: none;
+  outline: none;
+  border: 1px solid var(--navy-blue-modal);
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-action-textarea:focus {
+  border-color: var(--iris);
+}
+
+.form-action-icon {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-action-input:focus + .form-action-icon {
+  fill: var(--iris);
+}
+
+.checkbox-label{
+  margin-bottom: 24px;
+}
+
+.checkbox-script {
+  font: 400 12px / 1.16667 var(--font-family);
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
+}
+
+.checkbox-script-link {
+  font: 400 12px / 1.33333 var(--font-family);
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--iris);
+}
+
+.form-action-btn {
+  margin: 0 auto;
+  border-radius: 4px;
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: var(--iris);
+  border: none;
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-action-btn:focus,
+.form-action-btn:hover{
+  background-color: var(--ocean);
 }
