--- a/css/style.css
+++ b/css/style.css
@@ -868,8 +868,51 @@ color: var(--navy-blue); */
   fill: var(--iris);
 }
 
-.checkbox-label{
+.checkbox-form-agree {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 4px;
   margin-bottom: 24px;
+}
+
+.checkbox-form-agree-box {
+  appearance: none;
+  /* width: 16px;
+  height: 16px; */
+
+  /* border: 1px solid var(--navy-blue-modal);
+  border-radius: 2px; */
+
+  /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='8' fill='none' viewBox='0 0 10 8'%3E%3Cpath fill='%23F4F4FD' d='M8.46.49a.916.916 0 0 1 .61-.223.914.914 0 0 1 .607.23.78.78 0 0 1 .262.556.773.773 0 0 1-.23.567L5.054 6.994a.877.877 0 0 1-.284.188.937.937 0 0 1-.976-.167L.707 4.165a.813.813 0 0 1-.203-.261.756.756 0 0 1 .18-.9.884.884 0 0 1 .292-.178.94.94 0 0 1 .684.011.877.877 0 0 1 .284.187l2.443 2.254L8.439.513a.298.298 0 0 1 .023-.024H8.46Z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;*/
+  .background-size: 0;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-form-agree-unchecked {
+  opacity: 1;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-form-agree-box:checked
+  + .checkbox-form-agree-icon
+  > .checkbox-form-agree-unchecked {
+  opacity: 0;
+}
+
+.checkbox-form-agree-checked {
+  opacity: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-form-agree-box:checked
+  + .checkbox-form-agree-icon
+  > .checkbox-form-agree-checked {
+  opacity: 1;
 }
 
 .checkbox-script {
@@ -886,6 +929,7 @@ color: var(--navy-blue); */
 }
 
 .form-action-btn {
+  display: block;
   margin: 0 auto;
   border-radius: 4px;
   padding: 16px 32px;
@@ -901,6 +945,6 @@ color: var(--navy-blue); */
 }
 
 .form-action-btn:focus,
-.form-action-btn:hover{
+.form-action-btn:hover {
   background-color: var(--ocean);
 }
