--- a/css/mobile.css
+++ b/css/mobile.css
@@ -95,8 +95,7 @@ img {
 }
 
 .container {
-  min-width: 320px;
-  /* max-width: 428px; */
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 16px;
@@ -148,12 +147,13 @@ img {
 }
 
 .header-container {
+  min-width: 320px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   height: 70px;
-  padding: 24px 16px;
+  /* padding: 24px 16px; */
 }
 
 .nav-wrapp {
@@ -163,7 +163,7 @@ img {
 }
 
 .logo {
-  margin-right: 76px;
+  /* margin-right: 76px; */
 
   font-family: var(--second-family);
   font-weight: 800;
@@ -265,6 +265,10 @@ img {
   .contact-list {
     flex-direction: column;
   }
+
+  .menu-toggle {
+    display: none;
+  }
 }
 
 .menu-toggle {
@@ -274,4 +278,136 @@ img {
 
 .icon-mobile {
   stroke: var(--navy-blue);
+}
+
+/* style Hero */
+
+@media only screen and (max-width: 427px) {
+  .hero-section {
+    /* max-width: 428px; */
+    margin: 0 auto;
+    padding: 112px 0;
+
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero/hero_mob@1x.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: var(--grey);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/hero/hero_mob@2x.jpg);
+    }
+  }
+}
+
+.hero-title {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-bottom: 48px; */
+  margin-bottom: 72px;
+  max-width: 320px;
+  /* width: 496px; */
+
+  font-family: var(--font-family);
+  font-weight: 700;
+  /* font-size: 56px; */
+  font-size: 36px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--white);
+}
+
+.hero-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+  padding: 16px 32px;
+  min-width: 169px;
+  min-height: 56px;
+
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: var(--iris);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+  /* box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15); */
+  background-color: var(--ocean);
+}
+
+/* Style About */
+
+.about-container {
+  /* padding: 120px 0; */
+}
+
+.about-list {
+  display: flex;
+  gap: 72px;
+  flex-direction: column;
+  /* gap: 24px; */
+}
+
+/* Для першого елементу списку в класі заданий стиль width: calc((100% - 72px) / 4);
+для визначення ширини пункту списку (від загальної ширини екрану віднімаємо суму відступів
+між пунктами і ділимо це на кількість пунктів списку) (можна також використовувати
+width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4)
+або flex-basis: calc((100% - 72px) / 4)) */
+
+.about-item {
+  flex-basis: calc((100% - 3 * 24px) / 4);
+  /* width: 264px; */
+}
+
+.about-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  margin-bottom: 8px;
+  border-radius: 4px;
+  background-color: var(--cloud);
+}
+
+@media only screen and (max-width: 1157px) {
+  .about-wrap {
+    display: none;
+  }
+}
+
+.about-subtitle {
+  margin-bottom: 8px;
+}
+
+@media only screen and (max-width: 1157px) {
+  .about-subtitle {
+    font: 700 36px / 1.11111 var(--font-family);
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--navy-blue);
+  }
+
+  .about-title {
+    font: 500 16px / 1.5 var(--font-family);
+    letter-spacing: 0.02em;
+    color: var(--slate);
+  }
 }
