--- a/css/desktop.css
+++ b/css/desktop.css
@@ -116,9 +116,29 @@ width: calc((100% - 3 * 16px) / 3) або flex-basis: calc((100% - 48px) / 3)
     padding: 120px 0;
   }
 
-  .team-item{
+  .team-list {
+    flex-wrap: nowrap;
+  }
+
+  .team-item {
     flex-basis: calc((100% - 3 * 24px) / 4);
   }
 }
 
+/* Style  Customers */
 
+@media only screen and (min-width: 1158px) {
+  .customer-section {
+    padding: 120px 0;
+  }
+
+  .customer-list {
+    display: flex;
+    gap: 24px;
+  }
+
+  .customer-item {
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+  }Я
+}
