--- a/css/mobile.css
+++ b/css/mobile.css
@@ -55,8 +55,8 @@ p {
 
 img {
   display: block;
-  /* max-width: 100%;
-    height: auto; */
+  max-width: 100%;
+  height: auto;
 }
 
 .btn {
@@ -507,4 +507,73 @@ width: calc((100% - 3 * 24px) / 4) або flex-basis: calc((100% - 3 * 24px) / 4
 .link-social:hover,
 .link-social:focus {
   background-color: var(--ocean);
+}
+
+/* Style  Customers */
+
+.customer-section {
+  padding: 96px 0;
+}
+
+.customer-title {
+  margin-bottom: 72px;
+  text-align: center;
+}
+
+.customer-list {
+  display: flex;
+  gap: 24px;
+}
+
+@media only screen and (max-width: 427px) {
+  .customer-list {
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    align-items: center;
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+
+  .customer-item {
+    width: 168px;
+    height: 88px;
+  }
+}
+
+@media only screen and (min-width: 428px) (max-width: 767px) {
+  .customer-list {
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 16px;
+  }
+}
+Я
+.customer-item {
+  /* width: calc((100% - 120px) / 6); */
+  height: 88px;
+}
+
+.customer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
+
+  border: 1px solid var(--light-slate);
+  border-radius: 4px;
+  color: var(--light-slate);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customer-link:hover,
+.customer-link:focus {
+  border-color: var(--ocean);
+  color: var(--ocean);
+}
+
+.customer-icon {
+  fill: currentColor;
 }
